# daily_telegram_send_msg_python_boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: check_app.yml  pipeline.yml  run_app.yml
src/: main.py
src/core/: colored_formatter.py  config.py  logger.py  logger.yaml  logger_colored_formatter.py
src/schemas/: schema.py
src/services/: get_weather.py  process_data.py  send_msg.py
tests/: tests.py
