[tool.poetry]
name = "Python Boilerplate"
version = "0.1.0"
description = ""
authors = ["GennadyBr <gennady.budazhapov@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
autopep8 = "^2.3.1"
flake8 = "^7.1.1"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^2.0.0"
flake8-class-attributes-order = "^0.1.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.4.0"
flake8-functions = "^0.0.7"
flake8-isort = "^5.0.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.6.0"
flake8-quotes = "^3.3.1"
flake8-string-format = "^0.3.0"
flake8-variables-names = "^0.0.5"
pep8-naming = "^0.14.1"
flake8-pyproject = "^1.2.3"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.flake8]
exclude = [
    ".gitignore",
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".idea",
    ".ipynb_checkpoints",
    ".github",
    "src/migrations/",
]
max-line-length = 79
max-complexity = 8

[tool.mypy]
python_version = "^3.11"
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
exclude = [
    ".gitignore",
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".idea",
    ".ipynb_checkpoints",
    ".github",
    "src/migrations/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
